# ros2-project

./: README.md  attention_start.bash  attention_start_2.bash  camera_start.bash  camera_test.bash  comms_test.bash  default_config.json
my_package/: package.xml  setup.py
py_cameratest/: camera.py  package.xml  setup.cfg  setup.py
py_cameratest/launch/: cv2_launch.py
py_cameratest/py_cameratest/: detection_requester old.py  detection_requester.py  focus_tracker.py  multicam_subscriber_function.py  realsense_publisher_function.py  webcam_publisher_function.py  webcam_subscriber_function.py
py_communication/: package.xml  setup.cfg  setup.py
py_communication/py_communication/: chat_log_display.py  davinci_responder.py  tts_subscriber.py  tts_test_client.py  voice_recog_control.py  voice_recog_publisher.py
py_detection_services/: package.xml  setup.cfg  setup.py
py_detection_services/examples/: facial detection request example.json  facial detection response example
py_detection_services/py_detection_services/: facial_detection_service.py  facial_detection_service_torch.py  head_pose_detection_service.py  multi_detection_service.py  test_client.py  test_client_pose.py
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: publisher_member_function.py
py_srvcli/: package.xml  setup.py
py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
string_service_interface/: CMakeLists.txt  package.xml
string_service_interface/srv/: StringInStringOut.srv
tutorial_interfaces/: CMakeLists.txt  package.xml
(+8 files in other folders)
